--- a/03_JavaScript/03_요소접근하기.html
+++ b/03_JavaScript/03_요소접근하기.html
@@ -175,14 +175,78 @@
             // 선택하신 메뉴는 아메리카노 라떼 입니다.
             // 선택하신 메뉴는 아메리카노 말차라떼 입니다.
 
+            let checkMenu = "";
+            /*
             if(menus[0].checked) {
-                alert("선택하신 메뉴는 아메리카노 입니다.")
+                checkMenu += " " + menus[0].value;
             }
+            if(menus[1].checked) {
+                checkMenu += " " + menus[1].value;
+            }
+            if(menus[2].checked) {
+                checkMenu += " " + menus[2].value;
+            }
+            */
+            for(let i = 0; i < menus.length; i++) {
+                if(menus[i].checked) {
+                    checkMenu += " " + menus[i].value;
+                }
+            }
+
+            const array = [...menus];
+            const selected = array.filter((e) => e.checked).map((m) => m.value);
+            console.log(`선택한 메뉴들 ${selected}`);
+
+            if(checkMenu) {
+                alert(`선택하신 메뉴는 ${selected} 입니다.`);
+            }
+
+            // 자바스크립트의 논리 값
+            
+            // 자바의 논리값 == true / false
+
+            // 자바스크립트는 모든 값이 논리값으로 쓰일 수 있음
+            // true / false
+            // Falsy
+            // 0, 0.0, '', "", null, undefined, NaN
+
+            console.log("a");
+            console.log("b" + "a" + +"a" + "a");
         });
-
     </script>
-    
 
+    <hr>
+
+    <h4>4) 클래스 속성명으로 요소 객체들 접근하기</h4>
+
+    <div class="test"></div>
+    <p class="test"></p>
+    <ul class="test">
+        <li>
+            <pre class="test"></pre>
+        </li>
+        <li>
+            <pre class="test"></pre>
+        </li>
+        <li>
+            <pre class="test"></pre>
+        </li>
+    </ul>
+
+    <button onclick="accessClass();">class 속성으로 선택하기</button>
+
+    <script>
+        function accessClass() {
+            // document.getElementsByClassName('클래스 속성값')
+
+            console.log(document.getElementsByClassName("test"));
+
+            const tests = document.querySelectorAll(".test");
+
+            console.log(tests);
+
+        }
+    </script>
 </body>
 </html>
 
